test: 테스트 코드 통과하도록 변경